wip FLEX target tests added
BARE, WRAP & PAC removed (FLEX is the future)

--- a/test/MDK-ARM_LL_UART_RTT0_BARE_STM32F030R8-NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_BARE_STM32F030R8-NUCLEO-64.uvprojx
+++ b/test/MDK-ARM_LL_UART_RTT0_BARE_STM32F030R8-NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_BARE_STM32F030R8-NUCLEO-64.uvprojx
@@ -474,14 +474,9 @@
               <FilePath>..\..\..\third_party\segger.com\SEGGER_RTT\RTT\SEGGER_RTT.c</FilePath>
             </File>
             <File>
-              <FileName>triceFifo.c</FileName>
+              <FileName>trice.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\..\srcTrice.C\triceFifo.c</FilePath>
-            </File>
-            <File>
-              <FileName>triceFifoToBytesBuffer.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\srcTrice.C\triceFifoToBytesBuffer.c</FilePath>
+              <FilePath>..\..\..\srcTrice.C\trice.c</FilePath>
             </File>
           </Files>
         </Group>
