--- a/test/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64.uvprojx
+++ b/test/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64.uvprojx
@@ -479,9 +479,9 @@
               <FilePath>..\..\..\third_party\segger.com\SEGGER_RTT\RTT\SEGGER_RTT.c</FilePath>
             </File>
             <File>
-              <FileName>triceFifo.c</FileName>
+              <FileName>trice.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\..\srcTrice.C\triceFifo.c</FilePath>
+              <FilePath>..\..\..\srcTrice.C\trice.c</FilePath>
             </File>
           </Files>
         </Group>
