--- a/test/MDK-ARM_LL_UART_RTT0_PACK_STM32F030R8-NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_PACK_STM32F030R8-NUCLEO-64.uvprojx
+++ b/test/MDK-ARM_LL_UART_RTT0_PACK_STM32F030R8-NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_PACK_STM32F030R8-NUCLEO-64.uvprojx
@@ -464,11 +464,6 @@
               <FilePath>..\..\..\srcTrice.C\triceCheck.c</FilePath>
             </File>
             <File>
-              <FileName>triceFifo.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\srcTrice.C\triceFifo.c</FilePath>
-            </File>
-            <File>
               <FileName>triceSeggerRTT.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\srcTrice.C\triceSeggerRTT.c</FilePath>
@@ -477,6 +472,11 @@
               <FileName>SEGGER_RTT.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\third_party\segger.com\SEGGER_RTT\RTT\SEGGER_RTT.c</FilePath>
+            </File>
+            <File>
+              <FileName>trice.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\srcTrice.C\trice.c</FilePath>
             </File>
           </Files>
         </Group>
