--- a/test/MDK-ARM_LL_UART_WRAP_RTT0_BARE_STM32F030R8-NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_WRAP_RTT0_BARE_STM32F030R8-NUCLEO-64.uvprojx
+++ b/test/MDK-ARM_LL_UART_WRAP_RTT0_BARE_STM32F030R8-NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_WRAP_RTT0_BARE_STM32F030R8-NUCLEO-64.uvprojx
@@ -469,16 +469,6 @@
               <FilePath>..\..\..\third_party\segger.com\SEGGER_RTT\RTT\SEGGER_RTT.c</FilePath>
             </File>
             <File>
-              <FileName>triceFifo.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\srcTrice.C\triceFifo.c</FilePath>
-            </File>
-            <File>
-              <FileName>triceFifoToBytesBuffer.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\srcTrice.C\triceFifoToBytesBuffer.c</FilePath>
-            </File>
-            <File>
               <FileName>triceSeggerRTT.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\srcTrice.C\triceSeggerRTT.c</FilePath>
@@ -487,6 +477,11 @@
               <FileName>triceXteaCrypto.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\srcTrice.C\triceXteaCrypto.c</FilePath>
+            </File>
+            <File>
+              <FileName>trice.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\srcTrice.C\trice.c</FilePath>
             </File>
           </Files>
         </Group>
