fetch-depth: 0 removed

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -12,8 +12,8 @@ jobs:
        -
         name: Checkout
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+        # with:
+        #   fetch-depth: 0 # You have an error in your yaml syntax on line 16
       -
         name: Set up Go
         uses: actions/setup-go@v2
