--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,11 +7,12 @@ on:
     # branches: [ $default-branch ]
   pull_request:
     branches: [ $default-branch ]
+  workflow_dispatch:
 
 jobs:
 
-  build:
-    runs-on: ubuntu-latest
+  job1:
+    runs-on: [ubuntu-latest, windows-latest]
     steps:
     - uses: actions/checkout@v2
 
@@ -20,8 +21,12 @@ jobs:
       with:
         go-version: 1.16
 
+    - name: Check
+      run: go vet -v ./...
+
+    - name: Test
+      run: go test ./cmd/... ./internal/...
+
     - name: Build
       run: go build -v ./...
 
-    - name: Test
-      run: go test -v ./...
