--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -17,8 +17,8 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ $default-branch ]
-  schedule:
-    - cron: $cron-weekly
+  # schedule:
+    # - cron: $cron-weekly
   workflow_dispatch:
 
 jobs:
