--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -3,7 +3,7 @@ name: learn-github-actions
 on: [push, workflow_dispatch]
 jobs:
   check-bats-version:
-    runs-on: [ubuntu-latest, windows-latest]
+    runs-on: ubuntu-latest # [ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
