cli BUFFER input works, more tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -104,20 +104,20 @@
             ]
         },
         {
-            "name": "trice l -p COM",
+            "name": "trice l -p BUFFER",
             "type": "go",
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}/cmd/trice",
             "env": {},
             "args": ["log",
-                     "-testTable",
+                     "-v",
                      "-encoding",
                      "flexL",
                      "-port",
-                     "COM3",
-                     "-baud",
-                     "115200",
+                     "BUFFER",
+                     "-args",
+                     "2, 124, 227, 255, 0, 0, 4, 0",
                      "-idlist",
                      "${workspaceFolder}/til.json",
                      "-password",
