--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: shogo82148/actions-goveralls@v1
       with:
-        # path-to-profile: profile.cov
+        path-to-profile: profile.cov
         github-token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Go
