--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: shogo82148/actions-goveralls@v1(
+    - uses: shogo82148/actions-goveralls@v1
       with:
         path-to-profile: coverage.out
         github-token: ${{ secrets.GITHUB_TOKEN }}
