--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,6 +1,6 @@
 name: Greetings
 
-on: [push, pull_request, issues, workflow_dispatch]
+on: workflow_dispatch # [push, pull_request, issues, workflow_dispatch]
 
 jobs:
   greeting:
