--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,7 +1,7 @@
 name: Super-Linter
 
 # Run this workflow every time a new commit pushed to your repository
-on: [push, workflow_dispatch]
+on: [workflow_dispatch]
 
 jobs:
   # Set the job key. The key is displayed as the job name
