displayServer autostart option deactivated

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -125,15 +125,17 @@
             ]
         },       
         {
-            "name": "remoteDisplay",
+            "name": "displayServer",
             "type": "go",
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}/cmd/trice",
             "env": {},
-            "args": ["remoteDisplay",
+            "args": ["l",
+                     "-ds",
+                     "-a",
                      "-port",
-                     "COM38",
+                     "COM4",
                      "-baud",
                      "115200",
                      "-idlist",
