--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ internal/decoder/debug.test
 .netrc
 
 test/PSoC-Creator-4.2-Workspace/PSoC-Creator-4.2-Workspace.cywrk.ms
+
+test/PSoC-Creator-4.2-Workspace/Software_Transmit_UART.cydsn/Software_Transmit_UART.cyfit
+
+test/PSoC-Creator-4.2-Workspace/Software_Transmit_UART.cydsn/Software_Transmit_UART.rpt
