Encryption works again with double buffering

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -95,8 +95,8 @@
             "env": {},
             "args": ["log",
                      "-p",
-                     "COM3",
-                     "-s",
+                     "COM16",
+                     "-debug",
                      "-password",
                      "MySecret",
                      "-idlist",
