--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -220,7 +220,7 @@
             ]
         },        
         {
-            "name": "l -p COM5",
+            "name": "l -p COMx",
             "type": "go",
             "request": "launch",
             "mode": "auto",
@@ -230,7 +230,7 @@
                     "-til",
                     "${workspaceFolder}/til.json",
                      "-p",
-                     "COM5"
+                     "COM7"
             ]
         },        
         {
