Now with optional target source location
Not iron prooved

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -243,9 +243,7 @@
             "args": ["update",
                     "-v",
                     "-src",
-                    "C:/repos/trice/srcTrice.C",
-                    "-src",
-                    "C:/repos/trice/test/MDK-ARM_LL_UART_RTT0_PACK_STM32F030R8-NUCLEO-64",
+                    "${workspaceFolder}/test/MDK-ARM_STM32G071RB",
                     "-IDMethod",
                     "random",
                     "-idlist",
