--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -34,6 +34,7 @@ builds:
     goos:
       - windows
       - linux
+      - darwin
       # - darwin github.com/tarm/serial does not support macOS
 
     # GOARCH to build for.
@@ -42,6 +43,8 @@ builds:
     goarch:
       - 386
       - amd64
+      - arm
+      - arm64
       #- arm build error on server
       #- arm64 build error on server
 
