--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -34,6 +34,7 @@ builds:
     goos:
       - windows
       - linux
+      - darwin
       # - darwin github.com/tarm/serial does not support macOS
 
     # GOARCH to build for.
