--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -52,7 +52,7 @@
             ]
         },              
         {
-            "name": "-p JLINK",
+            "name": "-p STLINK",
             "type": "go",
             "request": "launch",
             "mode": "auto",
@@ -60,7 +60,7 @@
             "env": {},
             "args": ["log",
                      "-port",
-                     "JLINK",
+                     "STLINK",
                      "-args",
                      "\"-Device STM32F030R8 -if SWD -speed 4000 -RTTChannel 0 -RTTSearchRanges 0x20000000_0x1000\"",
                      "-verbose",
