comments & code linted a bit

--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -1,7 +1,7 @@
 # This workflow will triage pull requests and apply a label based on the
 # paths that are modified in the pull request.
 #
-# To use this workflow, you will need to set up a .github/labeler.yml
+# To use this workflow, you will need to set up a .gitHub/labeler.yml
 # file with configuration.  For more information, see:
 # https://github.com/actions/labeler
 
