TCOBS further bugfixing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
         "triceconfig.h": "c"
     },
     "cSpell.words": [
+        "CFLAGS",
         "COBSR",
+        "flto",
         "NUCLEO",
         "Strg",
         "tcobs"
