--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -34,7 +34,7 @@ builds:
     goos:
       - windows
       - linux
-      #- darwin
+      - darwin
 
     # GOARCH to build for.
     # For more info refer to: https://golang.org/doc/install/source#environment
@@ -42,8 +42,8 @@ builds:
     goarch:
       - 386
       - amd64
-      #- arm # build error on server?
-      #- arm64 # build error on server?
+      - arm # build error on server?
+      - arm64 # build error on server?
 
     # GOARM to build for when GOARCH is arm.
     # For more info refer to: https://golang.org/doc/install/source#environment
