--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -68,20 +68,17 @@
                      "${workspaceFolder}/til.json"
             ]
         },        {
-            "name": "-p FILE DUMP",
+            "name": "-p FILEBUFFER",
             "type": "go",
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}/cmd/trice",
             "env": {},
             "args": ["log",
-                    "-v",
                     "-port",
-                    "FILE",
+                    "FILEBUFFER",
                      "-args",
-                     "${workspaceFolder}/x.txt",
-                     "-e",
-                     "DUMP",
+                     "${workspaceFolder}/internal/decoder/testdata/trice.bin",
                      "-idlist",
                      "${workspaceFolder}/til.json"
             ]
