UART write added in -ds mode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -255,7 +255,8 @@
                     "-til",
                     "${workspaceFolder}/til.json",
                      "-p",
-                     "COM6"
+                     "COM14",
+                     "-ds"
             ]
         },        
         {
