--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -255,8 +255,7 @@
                     "-til",
                     "${workspaceFolder}/til.json",
                      "-p",
-                     "COM14",
-                     "-ds"
+                     "COM6"
             ]
         },        
         {
