Multiple physical channels parallel seems ok (needs more tests) TREX now with 13 bit IDs instead of 14 bit.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -245,7 +245,7 @@
             ]
         },        
         {
-            "name": "l -p COMx -e trex",
+            "name": "l -p COM6",
             "type": "go",
             "request": "launch",
             "mode": "auto",
