TREX C-Code inside tests executed ok

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "files.associations": {
         "trice.h": "c",
         "triceconfig.h": "c",
-        "tcobs.h": "c"
+        "tcobs.h": "c",
+        "trice_test.h": "c"
     },
     "cSpell.words": [
         "CFLAGS",
