Generate til.json.c works

--- a/test/MDK-ARM_STM32F030R8/MDK-ARM/MDK-ARM_STM32F030R8.uvprojx
+++ b/test/MDK-ARM_STM32F030R8/MDK-ARM/MDK-ARM_STM32F030R8.uvprojx
@@ -855,6 +855,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\pkg\trice\triceStackBuffer.c</FilePath>
             </File>
+            <File>
+              <FileName>til.json.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\til.json.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
